@@ -16,12 +16,14 @@
 package org.thingsboard.mqtt.broker.service.install;
 
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.SystemUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Profile;
 import org.springframework.stereotype.Service;
+import org.thingsboard.mqtt.broker.dao.messages.DeviceMsgService;
 
-import java.nio.charset.Charset;
+import java.io.File;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -32,12 +34,15 @@ import java.sql.SQLException;
 import java.sql.SQLWarning;
 import java.sql.Statement;
 import java.util.concurrent.TimeUnit;
+import java.util.function.Consumer;
 
 @Service
 @Profile("install")
 @Slf4j
 public class SqlDatabaseUpgradeService implements DatabaseEntitiesUpgradeService {
 
+    private static final String THINGSBOARD_WINDOWS_UPGRADE_DIR = "THINGSBOARD_WINDOWS_UPGRADE_DIR";
+    private static final String PATH_TO_USERS_PUBLIC_FOLDER = "C:\\Users\\Public";
     private static final String SCHEMA_UPDATE_SQL = "schema_update.sql";
 
     @Value("${spring.datasource.url}")
@@ -49,91 +54,89 @@ public class SqlDatabaseUpgradeService implements DatabaseEntitiesUpgradeService
     @Value("${spring.datasource.password}")
     private String dbPassword;
 
+    @Value("${mqtt.persistent-session.device.persisted-messages.limit}")
+    private int messagesLimit;
+
     @Autowired
     private InstallScripts installScripts;
 
+    @Autowired
+    private DeviceMsgService deviceMsgService;
+
     @Override
-    public void upgradeDatabase(String fromVersion) throws Exception {
+    public void upgradeDatabase(String fromVersion) {
         switch (fromVersion) {
             case "1.0.1":
-                try (Connection conn = DriverManager.getConnection(dbUrl, dbUserName, dbPassword)) {
-                    log.info("Updating schema ...");
-                    if (isOldSchema(conn, 1000000)) {
-                        try {
-                            conn.createStatement().execute("ALTER TABLE device_publish_msg ADD COLUMN msg_expiry_interval int;"); //NOSONAR, ignoring because method used to execute thingsboard_mqtt_broker database upgrade script
-                        } catch (Exception ignored) {
-                        }
-                        try {
-                            conn.createStatement().execute("UPDATE tb_schema_settings SET schema_version = 1001000;");
-                        } catch (Exception ignored) {
-                        }
+                updateSchema("1.0.0", 1000000, "1.1.0", 1001000, conn -> {
+                    try {
+                        conn.createStatement().execute("ALTER TABLE device_publish_msg ADD COLUMN msg_expiry_interval int;"); //NOSONAR, ignoring because method used to execute thingsboard_mqtt_broker database upgrade script
+                    } catch (Exception ignored) {
                     }
-                    log.info("Schema updated.");
-                }
+                });
                 break;
             case "1.1.0":
-                try (Connection conn = DriverManager.getConnection(dbUrl, dbUserName, dbPassword)) {
-                    log.info("Updating schema ...");
-                    if (isOldSchema(conn, 1001000)) {
-                        try {
-                            conn.createStatement().execute("UPDATE tb_schema_settings SET schema_version = 1002000;");
-                        } catch (Exception ignored) {
-                        }
-                    }
-                    log.info("Schema updated.");
-                }
+                updateSchema("1.1.0", 1001000, "1.2.0", 1002000);
                 break;
             case "1.2.0":
-                try (Connection conn = DriverManager.getConnection(dbUrl, dbUserName, dbPassword)) {
-                    log.info("Updating schema ...");
-                    if (isOldSchema(conn, 1002000)) {
-                        try {
-                            conn.createStatement().execute("ALTER TABLE device_publish_msg ADD COLUMN payload_format_indicator int;");
-                        } catch (Exception ignored) {
-                        }
-                        try {
-                            conn.createStatement().execute("ALTER TABLE device_publish_msg ADD COLUMN content_type varchar(255);");
-                        } catch (Exception ignored) {
-                        }
-                        try {
-                            conn.createStatement().execute("UPDATE tb_schema_settings SET schema_version = 1002001;");
-                        } catch (Exception ignored) {
-                        }
+                updateSchema("1.2.0", 1002000, "1.2.1", 1002001, conn -> {
+                    try {
+                        conn.createStatement().execute("ALTER TABLE device_publish_msg ADD COLUMN payload_format_indicator int;");
+                    } catch (Exception ignored) {
                     }
-                    log.info("Schema updated.");
-                }
+                    try {
+                        conn.createStatement().execute("ALTER TABLE device_publish_msg ADD COLUMN content_type varchar(255);");
+                    } catch (Exception ignored) {
+                    }
+                });
                 break;
             case "1.2.1":
-                try (Connection conn = DriverManager.getConnection(dbUrl, dbUserName, dbPassword)) {
-                    log.info("Updating schema ...");
-                    if (isOldSchema(conn, 1002001)) {
-                        runSchemaUpdateScript(conn, "1.3.0");
-                        try {
-                            conn.createStatement().execute("ALTER TABLE device_publish_msg ADD COLUMN response_topic varchar(255);");
-                        } catch (Exception ignored) {
-                        }
-                        try {
-                            conn.createStatement().execute("ALTER TABLE device_publish_msg ADD COLUMN correlation_data bytea;");
-                        } catch (Exception ignored) {
-                        }
-                        try {
-                            conn.createStatement().execute("UPDATE tb_schema_settings SET schema_version = 1003000;");
-                        } catch (Exception ignored) {
-                        }
+                updateSchema("1.2.1", 1002001, "1.3.0", 1003000, conn -> {
+                    try {
+                        conn.createStatement().execute("ALTER TABLE device_publish_msg ADD COLUMN response_topic varchar(255);");
+                    } catch (Exception ignored) {
                     }
-                    log.info("Schema updated.");
-                }
+                    try {
+                        conn.createStatement().execute("ALTER TABLE device_publish_msg ADD COLUMN correlation_data bytea;");
+                    } catch (Exception ignored) {
+                    }
+                });
                 break;
             case "1.3.0":
-                try (Connection conn = DriverManager.getConnection(dbUrl, dbUserName, dbPassword)) {
-                    log.info("Updating schema ...");
-                    if (isOldSchema(conn, 1003000)) {
-                        try {
-                            conn.createStatement().execute("UPDATE tb_schema_settings SET schema_version = 1003001;");
-                        } catch (Exception ignored) {
-                        }
+                updateSchema("1.3.0", 1003000, "1.4.0", 1004000);
+                break;
+            case "1.4.0":
+                Path pathToTempFile = getTempFile("device_publish_msgs", ".csv");
+                updateSchema("1.4.0", 1004000, "2.0.0", 2000000, conn -> {
+                    try {
+                        log.info("Starting export of device publish messages to temp file: {} ...", pathToTempFile);
+                        conn.createStatement().execute("call export_device_publish_msgs(" + messagesLimit + ", '" + pathToTempFile + "')");
+                        log.info("Successfully exported device publish messages to temp file: {}", pathToTempFile);
+                    } catch (Exception e) {
+                        throw new RuntimeException("Failed to copy device publish messages to csv file: " + pathToTempFile + " due to: ", e);
                     }
-                    log.info("Schema updated.");
+                });
+                if (!pathToTempFile.toFile().exists()) {
+                    break;
+                }
+                boolean migrated = false;
+                try {
+                    log.info("Starting migration of device publish messages to Redis ...");
+                    deviceMsgService.importFromCsvFile(pathToTempFile);
+                    migrated = true;
+                    log.info("Successfully migrated device publish messages to Redis!");
+                } catch (Exception e) {
+                    log.error("Failed to import device publish messages from csv file: {}", pathToTempFile, e);
+                }
+                if (migrated) {
+                    try (Connection conn = DriverManager.getConnection(dbUrl, dbUserName, dbPassword)) {
+                        log.info("Removing device publish messages from Postgres ...");
+                        conn.createStatement().execute("DROP TABLE IF EXISTS device_publish_msg;");
+                        conn.createStatement().execute("DROP TABLE IF EXISTS device_session_ctx;");
+                        conn.createStatement().execute("DROP PROCEDURE IF EXISTS export_device_publish_msgs;");
+                        log.info("Successfully removed device publish messages from Postgres!");
+                    } catch (Exception e) {
+                        log.warn("Failed to remove device publish messages from Postgres due to: ", e);
+                    }
                 }
                 break;
             default:
@@ -141,13 +144,33 @@ public class SqlDatabaseUpgradeService implements DatabaseEntitiesUpgradeService
         }
     }
 
-    private void runSchemaUpdateScript(Connection connection, String version) throws Exception {
-        Path schemaUpdateFile = Paths.get(installScripts.getUpgradeDataDir(), "upgrade", version, SCHEMA_UPDATE_SQL);
-        loadSql(schemaUpdateFile, connection);
+    private void updateSchema(String oldVersionStr, int oldVersion, String newVersionStr, int newVersion) {
+        updateSchema(oldVersionStr, oldVersion, newVersionStr, newVersion, null);
+    }
+
+    private void updateSchema(String oldVersionStr, int oldVersion, String newVersionStr, int newVersion, Consumer<Connection> additionalAction) {
+        try (Connection conn = DriverManager.getConnection(dbUrl, dbUserName, dbPassword)) {
+            log.info("Updating schema ...");
+            if (isOldSchema(conn, oldVersion)) {
+                Path schemaUpdateFile = Paths.get(installScripts.getDataDir(), "upgrade", oldVersionStr, SCHEMA_UPDATE_SQL);
+                if (Files.exists(schemaUpdateFile)) {
+                    loadSql(schemaUpdateFile, conn);
+                }
+                if (additionalAction != null) {
+                    additionalAction.accept(conn);
+                }
+                conn.createStatement().execute("UPDATE tb_schema_settings SET schema_version = " + newVersion + ";");
+                log.info("Schema updated to version {}", newVersionStr);
+            } else {
+                log.info("Skip schema re-update to version {}. Use env flag 'SKIP_SCHEMA_VERSION_CHECK' to force the re-update.", newVersionStr);
+            }
+        } catch (Exception e) {
+            log.error("Failed updating schema!!!", e);
+        }
     }
 
     private void loadSql(Path sqlFile, Connection conn) throws Exception {
-        String sql = new String(Files.readAllBytes(sqlFile), Charset.forName("UTF-8"));
+        String sql = Files.readString(sqlFile);
         Statement st = conn.createStatement();
         st.setQueryTimeout((int) TimeUnit.HOURS.toSeconds(3));
         st.execute(sql);//NOSONAR, ignoring because method used to execute thingsboard_mqtt_broker database upgrade script
@@ -167,7 +190,11 @@ public class SqlDatabaseUpgradeService implements DatabaseEntitiesUpgradeService
         }
     }
 
-    protected boolean isOldSchema(Connection conn, long fromVersion) {
+    private boolean isOldSchema(Connection conn, long fromVersion) {
+        if (getBoolEnv("SKIP_SCHEMA_VERSION_CHECK", false)) {
+            log.info("Skipped DB schema version check due to SKIP_SCHEMA_VERSION_CHECK set to true!");
+            return true;
+        }
         boolean isOldSchema = true;
         try {
             Statement statement = conn.createStatement();
@@ -185,6 +212,41 @@ public class SqlDatabaseUpgradeService implements DatabaseEntitiesUpgradeService
             log.info("Failed to check current PostgreSQL schema due to: {}", e.getMessage());
         }
         return isOldSchema;
+    }
+
+    private Path getTempFile(String fileName, String extension) {
+        try {
+            if (SystemUtils.IS_OS_WINDOWS) {
+                String pathStr = getStrEnv(THINGSBOARD_WINDOWS_UPGRADE_DIR, PATH_TO_USERS_PUBLIC_FOLDER);
+                Path pathToPublicFolder = Paths.get(pathStr);
+                return Files.createTempFile(pathToPublicFolder, fileName, extension).toAbsolutePath();
+            }
+            Path tempDirPath = Files.createTempDirectory(fileName);
+            File tempDirAsFile = tempDirPath.toFile();
+            boolean writable = tempDirAsFile.setWritable(true, false);
+            boolean readable = tempDirAsFile.setReadable(true, false);
+            boolean executable = tempDirAsFile.setExecutable(true, false);
+            boolean permissionsGranted = writable && readable && executable;
+            if (!permissionsGranted) {
+                throw new RuntimeException("Failed to grant write permissions for the: " + tempDirPath + " directory!");
+            }
+            return tempDirPath.resolve(fileName + extension).toAbsolutePath();
+        } catch (Exception e) {
+            throw new RuntimeException("Failed to create temp file due to: ", e);
+        }
+    }
+
+    private static boolean getBoolEnv(String name, boolean defaultValue) {
+        String env = System.getenv(name);
+        if (env == null) {
+            return defaultValue;
+        }
+        return Boolean.parseBoolean(env);
+    }
+
+    private static String getStrEnv(String name, String defaultValue) {
+        String env = System.getenv(name);
+        return env == null ? defaultValue : env;
     }
 
 }
